logwatch-app/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logwatch-app
  namespace: wms-proto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: logwatch-app
  template:
    metadata:
      labels:
        app: logwatch-app
    spec:
      imagePullSecrets:
        - name: nexus-docker-creds
      containers:
        - name: logwatch-app
          image: nexus3.platform.svc.cluster.local:8082/logwatch-app:jenkins-5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/logwatch/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/logwatch/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 10
