logwatch-app/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logwatch-app
  namespace: wms-proto
spec:
  selector:
    app: logwatch-app
  ports:
    - port: 8080
      targetPort: 8080
